--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,17 @@ site_name: Fogbed
 
 theme:
   name: material
+  palette:
+    - scheme: 'default'
+      media: '(prefers-color-scheme: light)'
+      toggle:
+        icon: 'material/lightbulb'
+        name: "Switch to dark mode"
+    - scheme: 'slate'
+      media: '(prefers-color-scheme: dark)'
+      toggle:
+        icon: 'material/lightbulb-outline'
+        name: 'Switch to light mode'
   features:
     - navigation.sections
     - toc.integrate
