--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,8 @@ nav:
     - Local Emulation: 'local_emulation.md'
     - Distributed Emulation: 'distributed_emulation.md'
     - Using Config Files: 'config_files.md'
-    
+    - Monitoring Metrics: 'monitoring_metrics.md'
+
   - Examples: 
     - Sensors: 'examples.md'
   - Plugins:
