docs: update mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,4 +75,5 @@ nav:
   - Plugins:
     - FogBesu: https://github.com/EsauM10/fogbesu
     - FogLedger: https://github.com/larsid/FogLedger
+    - NetFL: https://github.com/larsid/netfl
    
