:sparkles: feat: add GitHub workflows for documentation build and Python package upload :fire: chore: remove outdated example scripts and update .gitignore :bookmark: chore: update SOURCES.txt and pyproject.toml for package inclusion

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,7 @@ fogbed = "fogbed.scripts:main"
 
 [project.urls]
 Homepage = "https://github.com/EsauM10/fogbed"
+
+[tool.setuptools.packages.find]
+include = ["fogbed*"]
+exclude = ["containernet*", "openflow*"]
