--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ description = "Fog computing emulation platform."
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-  "clusternet >= 0.9.2",
+  "clusternet >= 0.9.3",
   "urllib3 >= 1.26.0"
 ]
 keywords = ["networking", "emulator", "protocol", "Internet", "OpenFlow", "SDN", "fog"]
@@ -29,4 +29,4 @@ classifiers = [
 fogbed = "fogbed.scripts:main"
 
 [project.urls]
-Homepage = "https://github.com/EsauM10/fogbed"
+Homepage = "https://larsid.github.io/fogbed"
